<resources>

    <string name="app_name">滨海视窗</string>
    <string name="tab_news">新闻</string>
    <string name="tab_hot">热点</string>
    <string name="tab_user">我的</string>
    <!--提示语-->
    <string name="caution_quite">再按一次将退出</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="category_all_my">推荐</string>
    <string name="category_all">推荐</string>
    <string name="category_important">要闻</string>
    <string name="category_nearby">街镇</string>
    <string name="category_education">教育</string>
    <string name="category_culture">文化</string>
    <string name="category_society">社会</string>
    <string name="category_subscribe">订阅</string>
    <string name="category_video">视频</string>
    <string name="category_health">健康</string>
    <string name="category_sports">体育</string>
    <string name="category_tech">科技</string>
    <string name="category_car">汽车</string>
    <string name="category_entertainment">娱乐</string>
    <string name="category_finance">财经</string>
    <string name="category_military">军事</string>
    <string name="category_world">国际</string>
    <string name="category_hot">热点</string>
    <string name="category_positive">正能量</string>
    <string name="category_essay_joke">段子</string>
    <string name="category_image_funny">趣图</string>
    <string name="category_image_ppmm">美女</string>
    <string name="category_movie">电影</string>
    <string name="category_digital">数码</string>
    <string name="category_news_fashion">时尚</string>
    <string name="category_rumor">辟谣</string>
    <string name="category_marvel">奇葩</string>
    <string name="category_news_game">游戏</string>
    <string name="category_news_travel">旅游</string>
    <string name="category_news_baby">育儿</string>
    <string name="category_fitness">减肥</string>
    <string name="category_news_regimen">养生</string>
    <string name="category_news_food">美食</string>
    <string name="category_government">政务</string>
    <string name="category_news_history">历史</string>
    <string name="category_news_discovery">探索</string>
    <string name="category_news_story">故事</string>
    <string name="category_news_essay">美文</string>
    <string name="category_emotion">情感</string>
    <string name="category_essay_saying">语录</string>
    <string name="category_image_wonderful">美图</string>
    <string name="category_news_house">家居</string>
    <string name="category_news_home">房产</string>
    <string name="category_funny">搞笑</string>
    <string name="category_news_astrology">星座</string>
    <string name="category_news_culture">文化</string>
    <string name="category_graduate">毕业生</string>


    <!--爆料-->
    <string name="title_disclose">我要爆料</string>
    <string name="disclose">爆料</string>
    <string name="disclose_info">新鲜、热辣、八卦爆个不停</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="support">赞</string>
    <string name="discuss">评论</string>
    <string name="share">分享</string>

    <!--用户信息-->
    <string name="user_title">个人主页</string>
    <string name="user_status">这个人很懒，什么都没有写</string>
    <string name="user_discuss">我的评论</string>
    <string name="versions">版本信息</string>
    <string name="settings">设置</string>
    <string name="user_info">个人信息</string>
    <string name="complete">完成</string>
    <string name="photo">头像</string>
    <string name="nickname">昵称</string>
    <string name="status">签名</string>
    <string name="change_password">修改密码</string>
    <string name="logout">退出登录</string>

    <string name="image_from_camera">拍照</string>
    <string name="image_from_gallery">从手机相册选择</string>
    <string name="user_userinfo_nosdcard">无SD卡</string>
    <string name="user_userinfo_takephoneError_notsupport">设备不支持相机功能</string>
    <string name="user_userinfo_takephoneError_take_failed">拍照失败</string>
    <string name="user_userinfo_takephoneError_cut_failed">剪切图片失败</string>
</resources>
