<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.bhsc.mobile.main.NavigationMenu
        android:id="@+id/activity_main_NavigationMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/Navigation_btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Navigation_btn_1_icon"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/navigation_icon_size"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_home_normal"
                />

            <TextView
                android:id="@+id/Navigation_btn_1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/tab_news"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Navigation_btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Navigation_btn_2_icon"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/navigation_icon_size"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_disclose_normal"
                />

            <TextView
                android:id="@+id/Navigation_btn_2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/tab_hot"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Navigation_btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Navigation_btn_3_icon"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/navigation_icon_size"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_profile_nomal"
                />

            <TextView
                android:id="@+id/Navigation_btn_3_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/tab_user"
                />
        </LinearLayout>
    </com.bhsc.mobile.main.NavigationMenu>

    <FrameLayout
        android:id="@+id/activty_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/activity_main_NavigationMenu"
        />
    <View
        android:layout_above="@+id/activity_main_NavigationMenu"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>
</RelativeLayout>