<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <com.bhsc.mobile.view.meg7.widget.CustomShapeImageView
            android:id="@+id/fragment_user_photo"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:scaleType="centerCrop"
            android:src="@drawable/photo"
            app:shape="circle"
            />

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_mydiscuss_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname"/>

            <TextView
                android:id="@+id/item_mydiscuss_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="38dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_mydiscuss_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="评论内容"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:scaleType="centerCrop"
                android:src="@drawable/photo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="53dp">
            <!--赞-->
            <RelativeLayout
                android:id="@+id/item_disclose_btn_support"
                android:layout_width="77dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_news_normal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="10dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/btn_support_press"
                        android:scaleType="centerInside"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/support"
                        android:textSize="10sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(0)"
                        android:textSize="10sp"
                        />
                </LinearLayout>
            </RelativeLayout>
            <!--评论-->
            <RelativeLayout
                android:id="@+id/item_disclose_btn_discuss"
                android:layout_width="77dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/item_disclose_btn_support"
                android:background="@drawable/btn_news_normal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="10dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/btn_discuss_normal"
                        android:scaleType="centerInside"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/discuss"
                        android:textSize="10sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(0)"
                        android:textSize="10sp"
                        />
                </LinearLayout>
            </RelativeLayout>
            <!--分享-->
            <RelativeLayout
                android:id="@+id/item_disclose_btn_share"
                android:layout_width="77dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_news_normal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="10dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/btn_share_normal"
                        android:scaleType="centerInside"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/share"
                        android:textSize="10sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(0)"
                        android:textSize="10sp"
                        />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>