<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f7f7f7"
    >

    <RelativeLayout
        android:id="@+id/activity_disclose_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_disclose"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <RelativeLayout
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:id="@+id/fragment_disclose_title_menu"
            android:layout_width="@dimen/title_btn_width"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/btn_disclose_menu"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:layout_width="@dimen/title_btn_width"
            android:id="@+id/fragment_disclose_title_back"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_goback"
                />
            </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/activity_disclose_title"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >

        <EditText
            android:id="@+id/activity_disclose_edit_title"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#00000000"
            android:hint="标题（可选，20字以内）"
            android:maxLength="20"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#999999"
            android:layout_alignBottom="@+id/activity_disclose_edit_title"
            />
        <EditText
            android:id="@+id/activity_disclose_edit_content"
            android:background="@color/white"
            android:layout_below="@+id/activity_disclose_edit_title"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="16dp"
            />
        <LinearLayout
            android:id="@+id/activity_disclose_edit_images"
            android:layout_marginTop="9dp"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_below="@+id/activity_disclose_edit_content"
            android:orientation="horizontal"
            />

        <View
            android:id="@+id/activity_disclose_edit_divider"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/activity_disclose_edit_images"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#999999"/>
        
        <TextView
            android:id="@+id/activity_disclose_edit_confirm"
            android:layout_below="@+id/activity_disclose_edit_divider"
            android:layout_alignParentRight="true"
            android:layout_marginTop="18dp"
            android:layout_width="47dp"
            android:layout_height="23dp"
            android:text="@string/confirm"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/activity_disclose_edit_cancel"
            android:layout_below="@+id/activity_disclose_edit_divider"
            android:layout_toLeftOf="@+id/activity_disclose_edit_confirm"
            android:layout_marginTop="18dp"
            android:layout_width="47dp"
            android:layout_height="23dp"
            android:text="@string/cancel"
            android:gravity="center"
            />
    </RelativeLayout>
</RelativeLayout>